use link elements instead of span

--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <div class="header dropdown-related">
     <div class="header-top dropdown-related">
         <div class="header-left">
-            <span onclick="transitionToPage('index')">
+            <a href="index">
                 <img src="images/logo.png" alt="pagkypries logo">
-            </span>
+            </a>
         </div>
         <div class="main-title">
            <h1> Στατιστικά Παγκυπρίων Εξετάσεων </h1>
@@ -34,28 +34,28 @@
         <script src="javascript/year_choice.js"></script>
         <script src="javascript/initialize_pages.js"></script>
         <div class="mobile-home">
-            <span onclick="transitionToPage('index')">
+            <a href="index">
                 <div class="dropdown-icon">
                     <img src="images/home.png" alt="pagkypries logo">
                 </div>
                <div class="dropdown-text"> Αρχική Σελίδα </div>
-            </span>
+            </a>
         </div>
         <div class="mobile-about">     
-            <span onclick="transitionToPage('about')">
+            <a href="about">
                 <div class="dropdown-icon">
                     <img src="images/about.png" alt="pagkypries about">
                 </div>
                 <div class="dropdown-text"> Σχετικά </div>
-            </span>
+            </a>
         </div>
         <div class="mobile-contact">
-            <span onclick="transitionToPage('forum')">
+            <a href="forum">
                 <div class="dropdown-icon">
                     <img src="images/forum.png" alt="pagkypries contact">
                 </div>
                 <div class="dropdown-text"> Χώρος συζητήσεων </div>
-            </span>
+            </a>
         </div>
     </div>
 </div>
