--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
     <div class="main-content index-main">
         <div class="card">
-            <span onclick="transitionToPage('mean_rank')">
+            <a href="mean_rank">
                 <div class="card-title">
                     <h3>Κατάταξη ανά Μέσο Όρο<h3>
                 </div>
@@ -68,10 +68,10 @@
                     Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
                     Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου.
                 </div>
-            </span>
+            </a>
         </div>
         <div class="card">
-            <span onclick="transitionToPage('rank_by_lesson')">
+            <a href="rank_by_lesson">
                 <div class="card-title">
                     <h3>Κατάταξη ανά Μάθημα</h3>
                 </div>
@@ -80,21 +80,21 @@
                     Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου και επιλογής
                     μαθήματος.
                 </div>
-            </span>
+            </a>
         </div>
         <div class="card">
-            <span onclick="transitionToPage('minmax')">
+            <a href="minmax">
                 <div class="card-title">
                     <h3>Μέγιστα, Ελάχιστα και Μέσοι Όροι Μάθηματων</h3>
                 </div>
                 <div class="card-content">
                     Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
                 </div>
-            </span>
+            </a>
         </div>
 
         <div class="card">
-            <span onclick="transitionToPage('cyprus_curved')">
+            <a href="cyprus_curved">
                 <div class="card-title">
                     <h3>Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου</h3>
                 </div>
@@ -102,12 +102,11 @@
                     Οι υποψήφιοι σε κάθε πλαίσιο κατατάσσονται με βάση εκτίμιση της αναγωγής
                     όπως προβλέπεται από τον οδηγό εξετάσεων.
                 </div>
-            </span>
+            </a>
         </div>
         
         <div class="card">
-            <span onclick="transitionToPage('bases')">
-
+            <a href="bases">
                 <div class="card-title">
                     <h3>Βάσεις Πρόσβασης ΑΑΕΙ Κύπρου</h3>
                 </div>
@@ -116,7 +115,7 @@
                     σε στρατιωτικές σχολές και ΑΑΕΙ Κύπρου, για την επιλεγμένη
                     χρονιά.
                 </div>
-            </span>
+            </a>
         </div>
     </div>
 
