finalize student chart

--- a/student_chart.html
+++ b/student_chart.html
@@ -64,7 +64,9 @@
             <input class="numbersOnly" id="filter-input-text" placeholder="Αριθμός Υποψηφίου...">
             <button id="filter-input-button"> Αναζήτηση </button>
         </div>
-        <canvas id="myChart" width="100%" height="100%"></canvas>
+        <div id="chart-div">
+            <canvas id="myChart"></canvas>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
         <script src="javascript/student_chart.js"></script>
       
