finalize student chart

--- a/student_chart.html
+++ b/student_chart.html
@@ -64,7 +64,7 @@
             <input class="numbersOnly" id="filter-input-text" placeholder="Αριθμός Υποψηφίου...">
             <button id="filter-input-button"> Αναζήτηση </button>
         </div>
-        <div id="chart-div">
+        <div class="chart-div">
             <canvas id="myChart"></canvas>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
