--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
                 </div>
             </a>
         </div>
+
+
+        <div class="card">
+            <a href="lesson_histograms">
+                <div class="card-title">
+                    <h3>Ιστογράμμα Κατανομής Βαθμών ανά Μάθημα</h3>
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
+
+
+        <div class="card">
+            <a href="student_chart">
+                <div class="card-title">
+                    <h3>Γραφική Σχετικής Κατάταξης Μαθητή</h3>
+                </div>
+                <div class="card-content">
+                    Μπλα μπλα μπλα
+                </div>
+            </a>
+        </div>
     </div>
 
     <div id="footer"> </div>
