--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class="main-title">
-           <h1> Στατιστικά Παγκυπρίων Εξετάσεων </h1>
+           <h1> Στατιστικά Παγκύπριων Εξετάσεων </h1>
         </div>
         <div id="year-label">
             <h2></h2>
