--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h3>Κατάταξη ανά Μέσο Όρο<h3>
                 </div>
                 <div class="card-content">
-                    Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των εξετάσεων τους.
+                    Οι υποψήφιοι κατατάσσονται με βάση τον μέσο όρο όλων των μαθημάτων τους.
                     Δυνατότητα αναζήτησης συγκεκριμένου κωδικού υποψηφίου.
                 </div>
             </a>
@@ -85,10 +85,11 @@
         <div class="card">
             <a href="minmax">
                 <div class="card-title">
-                    <h3>Μέγιστα, Ελάχιστα και Μέσοι Όροι Μάθηματων</h3>
+                    <h3>Μέγιστα, Ελάχιστα και Μέσοι Όροι Μαθημάτων</h3>
                 </div>
                 <div class="card-content">
-                    Μέγιστες και Ελάχιστες Βαθμολογίες και Μέσος Όρος Μάθηματων.
+                    Μέγιστες και Ελάχιστες Βαθμολογίες 
+                    Μέσοι Όροι Μαθημάτων
                 </div>
             </a>
         </div>
@@ -99,8 +100,8 @@
                     <h3>Εκτιμώμενη Αναγωγή ανά Πλαίσιο Πρόβασης για ΑΑΕΙ Κύπρου</h3>
                 </div>
                 <div class="card-content">
-                    Οι υποψήφιοι σε κάθε πλαίσιο κατατάσσονται με βάση εκτίμιση της αναγωγής
-                    όπως προβλέπεται από τον οδηγό εξετάσεων.
+                    Οι υποψήφιοι σε κάθε πλαίσιο κατατάσσονται βάση εκτίμησης της αναγωγής
+                    όπως προβλέπεται από τον Οδηγό Εξετάσεων.
                 </div>
             </a>
         </div>
@@ -122,10 +123,10 @@
         <div class="card">
             <a href="lesson_histograms">
                 <div class="card-title">
-                    <h3>Ιστογράμμα Κατανομής Βαθμών ανά Μάθημα</h3>
+                    <h3>Κατανομή Βαθμών ανά Μάθημα</h3>
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα
+                    Γραφική παράσταση των αποτελεσμάτων σε κάθε μάθημα.
                 </div>
             </a>
         </div>
@@ -134,10 +135,10 @@
         <div class="card">
             <a href="student_chart">
                 <div class="card-title">
-                    <h3>Γραφική Σχετικής Κατάταξης Μαθητή</h3>
+                    <h3>Σχετική Κατάταξη Μαθητή</h3>
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα
+                    Γραφική παράσταση της θέσης του μαθητή στα μαθήματα που εξετάστηκε.
                 </div>
             </a>
         </div>
@@ -146,10 +147,10 @@
         <div class="card">
             <a href="bases_chart">
                 <div class="card-title">
-                    <h3>Γραφική Βάσεων Πρόσβασης</h3>
+                    <h3>Βάσεις Πρόσβασης</h3>
                 </div>
                 <div class="card-content">
-                    Μπλα μπλα μπλα
+                    Γραφική παράσταση των ελάχιστων βαθμολογιών πρόσβασης κάθε σχολής.
                 </div>
             </a>
         </div>
