add content in about page

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general-style.css">
+    <link rel="stylesheet" href="css/about-style.css">
     <title>Σχετικά με | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
@@ -44,7 +45,40 @@
     
     
     <div id="header"> </div>
-    <div id="mobile-header"> </div>
+    <div class="main-content">
+        <div id="title">
+            <h2> Στατιστικά Παγκυπρίων Εξετάσεων </h2>
+        </div>
+        <br>
+        <div id="about-text">
+            <div class="small-title">Σκοπός Ιστοσελίδας </div>
+            <div class="about-small-text">
+                Η ιστοσελίδα δημιουργήθηκε με σκοπό την παρουσίαση στατιστικών στοιχείων 
+                που αφορούν στις παγκύπριες εξετάσεις των τελευταίων χρόνων. Οι ενδιαφερόμενοι
+                μπορούν να την χρησιμοποιήσουν ως εργαλείο για μελέτη των μοτίβων των παγκυπρίων εξετάσεων
+                ή για να αναλύσουν την επίδοση τους μετά τις εξετάσεις.
+            </div>
+            <br> <br>
+            <div class="small-title">Πηγή και στατιστική επεξεργασία δεδομένων</div>
+            <div class="about-small-text">
+                Τα δεδομένα ανακτήθηκαν από την επίσημη ιστοσελίδα του Υπουργείου Παιδείας και
+                Πολιτισμού. 
+                Όλες οι αναλύσεις και ειδικότερα οι εκτιμήσεις έχουν υπολογιστεί
+                με αυτόματες διαδικασίες γι'αυτό και μπορεί να συναντήσετε σφάλματα.
+                Αν πιστεύετε ότι βρήκατε κάποιο λάθος, μπορείτε να το αναφέρετε στον
+                χώρο συζητήσεων για να διορθωθεί.
+            </div>
+            <br> <br>
+            <div class="small-title">Τεχνικές λεπτομέρειες σχετικά με την ιστοσελίδα </div>
+            <div class="about-small-text">
+                Η ιστοσελίδα είναι προγραμματισμένη με HTML, CSS και JavaScript. H προεπεξεργασία
+                των δεδομένων έγινε με χρήση της Python. Για την παρουσίαση των γραφικών παραστάσεων
+                χρησιμοποιήθηκε το ChartJS και για την παρουσίαση πινάκων το AjaxInfiniteScroll.
+                Ο πηγαίος κώδικας της ιστοσελίδας μπορεί να βρεθεί <a href="https://github.com/Charis02/pagkypries">εδώ</a>.
+            </div>
+            <br> <br>
+        </div>
+    </div>
 
     <div id="footer"></div>
 </body>
