add mobile style

--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/general-style.css">
     <link rel="stylesheet" href="css/about-style.css">
+    <link rel="stylesheet" href="css/mobile-style.css">
     <title>Σχετικά με | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
@@ -46,17 +47,14 @@
     
     <div id="header"> </div>
     <div class="main-content">
-        <div id="title">
-            <h2> Στατιστικά Παγκυπρίων Εξετάσεων </h2>
-        </div>
-        <br>
         <div id="about-text">
+            <br>
             <div class="small-title">Σκοπός Ιστοσελίδας </div>
             <div class="about-small-text">
                 Η ιστοσελίδα δημιουργήθηκε με σκοπό την παρουσίαση στατιστικών στοιχείων 
                 που αφορούν στις παγκύπριες εξετάσεις των τελευταίων χρόνων. Οι ενδιαφερόμενοι
                 μπορούν να την χρησιμοποιήσουν ως εργαλείο για μελέτη των μοτίβων των παγκυπρίων εξετάσεων
-                ή για να αναλύσουν την επίδοση τους μετά τις εξετάσεις.
+                ή για να αναλύσουν την επίδοση τους.
             </div>
             <br> <br>
             <div class="small-title">Πηγή και στατιστική επεξεργασία δεδομένων</div>
