--- a/student_chart.html
+++ b/student_chart.html
@@ -47,7 +47,7 @@
     <script src="javascript/dropdown.js" async defer></script>
     <script src="javascript/page_transition.js" defer></script>
 
-    <title> Βάσεις ΑΑΕΙ Κύπρου | Παγκύπριες Εξετάσεις </title>
+    <title> Σχετική Κατάταξη Μαθητή | Παγκύπριες Εξετάσεις </title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
