--- a/cyprus_curved.html
+++ b/cyprus_curved.html
@@ -71,15 +71,15 @@
             </div>
             <div class="warning-text unblurred">
                 <p>
-                Δεν είναι δυνατό να προβλέψουμε την αναγωγή με 100% ακρίβεια.
+                    Δεν είναι δυνατό να προβλέψουμε την αναγωγή με 100% ακρίβεια.
                 </p>
                 <p>
-                Για να έιναι ακριβής ο υπολογισμός της αναγωγής, χρειαζόμαστε δεδομένα που δεν 
-                δημοσιεύονται δημόσια (θα έπρεπε να ξέρουμε τα πλαίσια πρόσβασης που δήλωσε κάθε μαθητής).
+                    Για να είναι ακριβής ο υπολογισμός της αναγωγής, χρειαζόμαστε δεδομένα που δε 
+                    δημοσιεύονται δημόσια (θα έπρεπε να ξέρουμε τα πλαίσια πρόσβασης που δήλωσε κάθε μαθητής).
                 </p>
 
                 <p>
-                    Αυτή η σελίδα προσφέρει απλά μία εκτίμιση, με την υπόθεση ότι όποιος μπορούσε
+                    Αυτή η σελίδα προσφέρει απλά μία εκτίμηση, με την υπόθεση ότι όποιος μπορούσε
                     να επιλέξει κάποιο πλαίσιο πρόσβασης το επέλεξε.
                 </p>
 
