fix multiple ias instances

--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -74,7 +74,7 @@
             
             <div id="lesson-filter" class="selector-filter">
                 Επιλέξτε μάθημα:
-                <select id="lesson-selector" onchange="rank_by_lesson();"></select>
+                <select id="lesson-selector" onchange="select_lesson();"></select>
             </div>
 
         </div>
