Revert "remove page transitions"
This reverts commit 705d974357fb026df9fde2646251975e1091eb59.

--- a/forum.html
+++ b/forum.html
@@ -31,6 +31,7 @@
     </script>
 
     <script type="module" src="javascript/forum.js" defer></script>
+    <script src="javascript/page_transition.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
 
     <meta charset="UTF-8">
