--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         });
     </script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title> Αρχική Σελίδα | Παγκύπριες Εξετάσεις </title>
 </head>
