--- a/lesson_histograms.html
+++ b/lesson_histograms.html
@@ -45,6 +45,7 @@
     
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
 
     <title> Κατανομή Βαθμολογιών Μαθημάτων | Παγκύπριες Εξετάσεις </title>
 </head>
