--- a/rank_by_lesson.html
+++ b/rank_by_lesson.html
@@ -49,6 +49,7 @@
     <script src="javascript/data_handler.js" defer></script>
     <script src="javascript/scroll_to_top.js" defer></script>
     <script src="javascript/dropdown.js" async defer></script>
+    <script src="javascript/page_transition.js" defer></script>
     <script src="javascript/filter.js" defer></script>
 
     <title>Κατάταξη Ανά Μάθημα | Παγκύπριες Εξετάσεις </title>
