change order for no double firing

--- a/header.html
+++ b/header.html
@@ -31,8 +31,8 @@
 
         </div>
 
-        <script src="javascript/year_choice.js"></script>
         <script src="javascript/initialize_pages.js"></script>
+        <script src="javascript/year_choice.js" defer></script>
         <div class="mobile-home">
             <a href="index">
                 <div class="dropdown-icon">
